# Credit-Guard

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DETAILS.md  CHANGELOG.md  Dockerfile  Dockerfile.streamlit  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
notebooks/: 01_EDA.ipynb  02_feature_engineering.ipynb  03_model_comparison.ipynb
resources/: COMO_EXECUTAR.md  DOCUMENTACAO_EDUCACIONAL.md  PROJECT_CONTEXT.md
src/: config.py
src/api/: main.py
src/api/routers/: explain.py  health.py  predict.py
src/audit/: logger.py
src/data/: loader.py  schemas.py
src/explainability/: shap_explainer.py
src/features/: engineer.py  selector.py
src/llm/: client.py  guardrails.py
src/llm/prompts/: v1_system.txt  v2_system.txt
src/models/: calibrator.py  evaluator.py  fairness.py  monitoring.py  trainer.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_features.py  test_guardrails.py  test_llm_client.py  test_schemas.py
