[project]
name = "CreditGuard"
version = "1.0.0"
description = "ML + GenAI para Análise de Risco de Crédito"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
# N803/N806: convenção sklearn/pandas (X_train, X_test, etc.)
ignore = ["E501", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
# Tipagem gradual: strict bloqueava o CI (modelos dinâmicos, sklearn, APIs).
strict = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=40"
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
